# rust_aws_dynamodb

./: Cargo.toml  README.md
src/: main.rs
